--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
     "bootstrap": "^5.3.0-alpha1",
     "bootstrap-icons": "^1.10.5",
     "eslint": "8.35.0",
